--- a/notebooks/04_MLP_model.ipynb
+++ b/notebooks/04_MLP_model.ipynb
@@ -19,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "✓ Imports OK\n",
-      "PyTorch version: 2.2.2\n"
+      "PyTorch version: 2.9.1+cu128\n"
      ]
     }
    ],
@@ -501,28 +501,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 | train loss: 0.5507, acc: 0.806 | val loss: 0.1672, acc: 0.954\n",
-      "Epoch 2/20 | train loss: 0.2319, acc: 0.907 | val loss: 0.1172, acc: 0.969\n",
-      "Epoch 3/20 | train loss: 0.1823, acc: 0.927 | val loss: 0.0976, acc: 0.973\n",
-      "Epoch 4/20 | train loss: 0.1536, acc: 0.938 | val loss: 0.0826, acc: 0.976\n",
-      "Epoch 5/20 | train loss: 0.1360, acc: 0.946 | val loss: 0.0715, acc: 0.980\n",
-      "Epoch 6/20 | train loss: 0.1232, acc: 0.950 | val loss: 0.0630, acc: 0.985\n",
-      "Epoch 7/20 | train loss: 0.1137, acc: 0.954 | val loss: 0.0594, acc: 0.984\n",
-      "Epoch 8/20 | train loss: 0.1062, acc: 0.957 | val loss: 0.0572, acc: 0.983\n",
-      "Epoch 9/20 | train loss: 0.0993, acc: 0.960 | val loss: 0.0500, acc: 0.988\n",
-      "Epoch 10/20 | train loss: 0.0968, acc: 0.960 | val loss: 0.0514, acc: 0.984\n",
-      "Epoch 11/20 | train loss: 0.0904, acc: 0.963 | val loss: 0.0477, acc: 0.987\n",
-      "Epoch 12/20 | train loss: 0.0890, acc: 0.964 | val loss: 0.0481, acc: 0.985\n",
-      "Epoch 13/20 | train loss: 0.0837, acc: 0.966 | val loss: 0.0451, acc: 0.985\n",
-      "Epoch 14/20 | train loss: 0.0819, acc: 0.967 | val loss: 0.0427, acc: 0.987\n",
-      "Epoch 15/20 | train loss: 0.0803, acc: 0.968 | val loss: 0.0400, acc: 0.989\n",
-      "Epoch 16/20 | train loss: 0.0774, acc: 0.969 | val loss: 0.0426, acc: 0.985\n",
-      "Epoch 17/20 | train loss: 0.0755, acc: 0.969 | val loss: 0.0406, acc: 0.987\n",
-      "Epoch 18/20 | train loss: 0.0746, acc: 0.969 | val loss: 0.0368, acc: 0.989\n",
-      "Epoch 19/20 | train loss: 0.0728, acc: 0.970 | val loss: 0.0404, acc: 0.984\n",
-      "Epoch 20/20 | train loss: 0.0715, acc: 0.972 | val loss: 0.0389, acc: 0.987\n",
+      "Epoch 1/20 | train loss: 0.5624, acc: 0.799 | val loss: 0.1795, acc: 0.949\n",
+      "Epoch 2/20 | train loss: 0.2439, acc: 0.901 | val loss: 0.1235, acc: 0.969\n",
+      "Epoch 3/20 | train loss: 0.1916, acc: 0.923 | val loss: 0.1030, acc: 0.970\n",
+      "Epoch 4/20 | train loss: 0.1615, acc: 0.934 | val loss: 0.0848, acc: 0.978\n",
+      "Epoch 5/20 | train loss: 0.1428, acc: 0.942 | val loss: 0.0775, acc: 0.979\n",
+      "Epoch 6/20 | train loss: 0.1290, acc: 0.947 | val loss: 0.0704, acc: 0.978\n",
+      "Epoch 7/20 | train loss: 0.1194, acc: 0.952 | val loss: 0.0677, acc: 0.980\n",
+      "Epoch 8/20 | train loss: 0.1133, acc: 0.955 | val loss: 0.0642, acc: 0.982\n",
+      "Epoch 9/20 | train loss: 0.1056, acc: 0.957 | val loss: 0.0580, acc: 0.983\n",
+      "Epoch 10/20 | train loss: 0.1002, acc: 0.960 | val loss: 0.0558, acc: 0.983\n",
+      "Epoch 11/20 | train loss: 0.0981, acc: 0.960 | val loss: 0.0529, acc: 0.983\n",
+      "Epoch 12/20 | train loss: 0.0941, acc: 0.962 | val loss: 0.0511, acc: 0.983\n",
+      "Epoch 13/20 | train loss: 0.0886, acc: 0.965 | val loss: 0.0528, acc: 0.980\n",
+      "Epoch 14/20 | train loss: 0.0883, acc: 0.965 | val loss: 0.0491, acc: 0.983\n",
+      "Epoch 15/20 | train loss: 0.0862, acc: 0.965 | val loss: 0.0467, acc: 0.984\n",
+      "Epoch 16/20 | train loss: 0.0829, acc: 0.967 | val loss: 0.0452, acc: 0.985\n",
+      "Epoch 17/20 | train loss: 0.0820, acc: 0.967 | val loss: 0.0457, acc: 0.986\n",
+      "Epoch 18/20 | train loss: 0.0793, acc: 0.968 | val loss: 0.0431, acc: 0.986\n",
+      "Epoch 19/20 | train loss: 0.0777, acc: 0.969 | val loss: 0.0446, acc: 0.985\n",
+      "Epoch 20/20 | train loss: 0.0748, acc: 0.970 | val loss: 0.0408, acc: 0.986\n",
       "\n",
-      "Loaded best model (val acc = 0.989)\n"
+      "Loaded best model (val acc = 0.986)\n"
      ]
     }
    ],
@@ -570,7 +570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.0390, acc: 0.986\n"
+      "Test loss: 0.0401, acc: 0.987\n"
      ]
     }
    ],
@@ -637,7 +637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -651,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
