--- a/notebooks/02_spotify_kaggle_dt.ipynb
+++ b/notebooks/02_spotify_kaggle_dt.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "a767a84d",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "52a81d66",
    "metadata": {},
    "outputs": [
@@ -258,13 +258,13 @@
        "4       0.0424   62.149   0.0693  1928  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kaggle_path = \"/Users/Vitaliano/Desktop/Data Science/FDS - Fundamentals of Data Science/Homework di Gruppo/Final Project/Music-mood pred/data/data.csv\"\n",
+    "kaggle_path = \"/workspaces/Music_Mood_recomender/data/data.csv\"\n",
     "\n",
     "df= pd.read_csv(kaggle_path)\n",
     "print(\"Kaggle dataset shape:\", df.shape)\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "713c9ec8",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "4       0.0424   62.149   0.0693       687733      kaggle  spotify_1921_2020  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
     "    \"loudness\",\"speechiness\",\"tempo\",\"valence\",\"duration_ms\"\n",
     "]\n",
     "\n",
-    "df = df_kaggle[keep].dropna(subset=[\"track_id\"])\n",
+    "df = df[keep].dropna(subset=[\"track_id\"])\n",
     "df[\"source_type\"] = \"kaggle\"\n",
     "df[\"source_label\"] = \"spotify_1921_2020\"\n",
     "\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "2d171483",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "38fd98fc",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "4   62.149   0.0693       687733  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "3decd612",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -749,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.24"
   }
  },
  "nbformat": 4,
