--- a/notebooks/04_MLP_model.ipynb
+++ b/notebooks/04_MLP_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "b580b348",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "d1da923a",
    "metadata": {},
    "outputs": [
@@ -120,8 +120,8 @@
        "      <td>0.0767</td>\n",
        "      <td>282133</td>\n",
        "      <td>1</td>\n",
-       "      <td>1_0</td>\n",
-       "      <td>Deep Calm &amp; Minimal</td>\n",
+       "      <td>1_2</td>\n",
+       "      <td>Epic Intense</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -141,8 +141,8 @@
        "      <td>0.8800</td>\n",
        "      <td>104300</td>\n",
        "      <td>0</td>\n",
-       "      <td>0_0</td>\n",
-       "      <td>Short Spoken Calm</td>\n",
+       "      <td>0_1</td>\n",
+       "      <td>Long Spoken Emotional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -183,8 +183,8 @@
        "      <td>0.0693</td>\n",
        "      <td>687733</td>\n",
        "      <td>1</td>\n",
-       "      <td>1_0</td>\n",
-       "      <td>Deep Calm &amp; Minimal</td>\n",
+       "      <td>1_2</td>\n",
+       "      <td>Epic Intense</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -214,20 +214,20 @@
        "\n",
        "     tempo  valence  duration_ms  macro_cluster subcluster  \\\n",
        "0  118.469   0.7790       158648              1        1_1   \n",
-       "1   83.972   0.0767       282133              1        1_0   \n",
-       "2  107.177   0.8800       104300              0        0_0   \n",
+       "1   83.972   0.0767       282133              1        1_2   \n",
+       "2  107.177   0.8800       104300              0        0_1   \n",
        "3  108.003   0.7200       180760              1        1_1   \n",
-       "4   62.149   0.0693       687733              1        1_0   \n",
+       "4   62.149   0.0693       687733              1        1_2   \n",
        "\n",
-       "      subcluster_label  \n",
-       "0  Warm Emotional Calm  \n",
-       "1  Deep Calm & Minimal  \n",
-       "2    Short Spoken Calm  \n",
-       "3  Warm Emotional Calm  \n",
-       "4  Deep Calm & Minimal  "
+       "        subcluster_label  \n",
+       "0    Warm Emotional Calm  \n",
+       "1           Epic Intense  \n",
+       "2  Long Spoken Emotional  \n",
+       "3    Warm Emotional Calm  \n",
+       "4           Epic Intense  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "a87982af",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Righe con subcluster: (169909, 18)\n"
+      "Righe con subcluster: (169861, 18)\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "3e9ffb7f",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "dea558c8",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: (135927, 10) Val: (16991, 10) Test: (16991, 10)\n"
+      "Train: (135888, 10) Val: (16986, 10) Test: (16987, 10)\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "14bf908b",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "0a521117",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "7f426dcb",
    "metadata": {},
    "outputs": [
@@ -444,27 +444,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 | train loss: 0.1732, acc: 0.933 | val loss: 0.1274, acc: 0.952\n",
-      "Epoch 2/20 | train loss: 0.1697, acc: 0.934 | val loss: 0.1276, acc: 0.951\n",
-      "Epoch 3/20 | train loss: 0.1696, acc: 0.934 | val loss: 0.1267, acc: 0.951\n",
-      "Epoch 4/20 | train loss: 0.1704, acc: 0.934 | val loss: 0.1255, acc: 0.951\n",
-      "Epoch 5/20 | train loss: 0.1697, acc: 0.933 | val loss: 0.1259, acc: 0.951\n",
-      "Epoch 6/20 | train loss: 0.1688, acc: 0.934 | val loss: 0.1244, acc: 0.951\n",
-      "Epoch 7/20 | train loss: 0.1669, acc: 0.935 | val loss: 0.1255, acc: 0.951\n",
-      "Epoch 8/20 | train loss: 0.1674, acc: 0.935 | val loss: 0.1247, acc: 0.952\n",
-      "Epoch 9/20 | train loss: 0.1663, acc: 0.936 | val loss: 0.1256, acc: 0.950\n",
-      "Epoch 10/20 | train loss: 0.1648, acc: 0.936 | val loss: 0.1228, acc: 0.951\n",
-      "Epoch 11/20 | train loss: 0.1653, acc: 0.936 | val loss: 0.1237, acc: 0.952\n",
-      "Epoch 12/20 | train loss: 0.1655, acc: 0.935 | val loss: 0.1229, acc: 0.952\n",
-      "Epoch 13/20 | train loss: 0.1640, acc: 0.936 | val loss: 0.1230, acc: 0.953\n",
-      "Epoch 14/20 | train loss: 0.1629, acc: 0.936 | val loss: 0.1226, acc: 0.950\n",
-      "Epoch 15/20 | train loss: 0.1636, acc: 0.936 | val loss: 0.1223, acc: 0.953\n",
-      "Epoch 16/20 | train loss: 0.1630, acc: 0.936 | val loss: 0.1235, acc: 0.950\n",
-      "Epoch 17/20 | train loss: 0.1623, acc: 0.937 | val loss: 0.1222, acc: 0.953\n",
-      "Epoch 18/20 | train loss: 0.1607, acc: 0.937 | val loss: 0.1211, acc: 0.952\n",
-      "Epoch 19/20 | train loss: 0.1614, acc: 0.937 | val loss: 0.1215, acc: 0.952\n",
-      "Epoch 20/20 | train loss: 0.1591, acc: 0.938 | val loss: 0.1209, acc: 0.952\n",
-      "Loaded best model: val_loss=0.1209, val_acc=0.952\n"
+      "Epoch 1/20 | train loss: 0.5984, acc: 0.805 | val loss: 0.2271, acc: 0.918\n",
+      "Epoch 2/20 | train loss: 0.2915, acc: 0.888 | val loss: 0.1903, acc: 0.929\n",
+      "Epoch 3/20 | train loss: 0.2569, acc: 0.901 | val loss: 0.1722, acc: 0.935\n",
+      "Epoch 4/20 | train loss: 0.2350, acc: 0.909 | val loss: 0.1622, acc: 0.937\n",
+      "Epoch 5/20 | train loss: 0.2215, acc: 0.914 | val loss: 0.1547, acc: 0.941\n",
+      "Epoch 6/20 | train loss: 0.2111, acc: 0.919 | val loss: 0.1508, acc: 0.941\n",
+      "Epoch 7/20 | train loss: 0.2034, acc: 0.921 | val loss: 0.1456, acc: 0.942\n",
+      "Epoch 8/20 | train loss: 0.1964, acc: 0.923 | val loss: 0.1440, acc: 0.945\n",
+      "Epoch 9/20 | train loss: 0.1914, acc: 0.925 | val loss: 0.1404, acc: 0.944\n",
+      "Epoch 10/20 | train loss: 0.1877, acc: 0.927 | val loss: 0.1393, acc: 0.945\n",
+      "Epoch 11/20 | train loss: 0.1839, acc: 0.929 | val loss: 0.1368, acc: 0.947\n",
+      "Epoch 12/20 | train loss: 0.1825, acc: 0.930 | val loss: 0.1350, acc: 0.947\n",
+      "Epoch 13/20 | train loss: 0.1785, acc: 0.931 | val loss: 0.1331, acc: 0.947\n",
+      "Epoch 14/20 | train loss: 0.1780, acc: 0.931 | val loss: 0.1342, acc: 0.947\n",
+      "Epoch 15/20 | train loss: 0.1756, acc: 0.931 | val loss: 0.1339, acc: 0.948\n",
+      "Epoch 16/20 | train loss: 0.1740, acc: 0.932 | val loss: 0.1326, acc: 0.947\n",
+      "Epoch 17/20 | train loss: 0.1734, acc: 0.933 | val loss: 0.1316, acc: 0.947\n",
+      "Epoch 18/20 | train loss: 0.1712, acc: 0.934 | val loss: 0.1318, acc: 0.947\n",
+      "Epoch 19/20 | train loss: 0.1700, acc: 0.934 | val loss: 0.1312, acc: 0.948\n",
+      "Epoch 20/20 | train loss: 0.1687, acc: 0.935 | val loss: 0.1286, acc: 0.949\n",
+      "Loaded best model: val_loss=0.1286, val_acc=0.949\n"
      ]
     }
    ],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "67363c39",
    "metadata": {},
    "outputs": [
@@ -556,26 +556,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.9501500794538285\n",
+      "Test accuracy: 0.9521398716665685\n",
       "\n",
       "Classification report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0_0       0.98      0.98      0.98       258\n",
-      "         0_1       0.92      0.95      0.94       129\n",
-      "         1_0       0.95      0.96      0.96      1337\n",
-      "         1_1       0.96      0.94      0.95      1278\n",
-      "         1_2       0.94      0.95      0.95       717\n",
-      "         2_0       0.95      0.93      0.94      2190\n",
-      "         2_1       0.94      0.96      0.95      2714\n",
-      "         2_2       0.96      0.96      0.96      3470\n",
-      "         2_3       0.95      0.96      0.96      1962\n",
-      "         2_4       0.93      0.92      0.92      1974\n",
-      "         2_5       0.95      0.97      0.96       962\n",
+      "         0_0       0.97      0.94      0.95       129\n",
+      "         0_1       0.97      1.00      0.98       259\n",
+      "         1_0       0.94      0.95      0.95       715\n",
+      "         1_1       0.96      0.95      0.95      1275\n",
+      "         1_2       0.95      0.97      0.96      1339\n",
+      "         2_0       0.96      0.96      0.96      3461\n",
+      "         2_1       0.95      0.97      0.96      1967\n",
+      "         2_2       0.92      0.93      0.92      1969\n",
+      "         2_3       0.97      0.97      0.97       961\n",
+      "         2_4       0.96      0.92      0.94      2189\n",
+      "         2_5       0.95      0.95      0.95      2723\n",
       "\n",
-      "    accuracy                           0.95     16991\n",
-      "   macro avg       0.95      0.95      0.95     16991\n",
-      "weighted avg       0.95      0.95      0.95     16991\n",
+      "    accuracy                           0.95     16987\n",
+      "   macro avg       0.95      0.96      0.95     16987\n",
+      "weighted avg       0.95      0.95      0.95     16987\n",
       "\n"
      ]
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "f0e8517e",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -646,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.24"
   }
  },
  "nbformat": 4,
