Added Telegram bot integration + updated recommender system

--- a/notebooks/03_feature_engineering_&_clustering.ipynb
+++ b/notebooks/03_feature_engineering_&_clustering.ipynb
@@ -5,23 +5,15 @@
    "id": "56888bee",
    "metadata": {},
    "source": [
-    "# Cell 1 - Import & path"
+    "# Cell 1 - Import & Loading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "35e79fd9",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Vitaliano/Desktop/Data Science/FDS - Fundamentals of Data Science/Homework di Gruppo/Final Project/Music-mood pred/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -39,6 +31,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.cluster import KMeans\n",
+    "from langdetect import detect, LangDetectException\n",
     "\n",
     "import umap\n",
     "import hdbscan\n",
@@ -49,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ef0a3b33",
    "metadata": {},
    "outputs": [
@@ -223,7 +216,7 @@
        "4   62.149   0.0693       687733  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "495cf093",
    "metadata": {},
    "outputs": [
@@ -286,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "00ac94ac",
    "metadata": {},
    "outputs": [
@@ -303,7 +296,7 @@
        "(169909, 10)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a5b7d98f",
    "metadata": {},
    "outputs": [
@@ -402,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "b913b970",
    "metadata": {},
    "outputs": [
@@ -491,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "bdbab0c2",
    "metadata": {},
    "outputs": [
@@ -526,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7d7197a3",
    "metadata": {},
    "outputs": [
@@ -587,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "308eb3ed",
    "metadata": {},
    "outputs": [
@@ -701,7 +694,7 @@
        "2              225883.953795  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b06be8f9",
    "metadata": {},
    "outputs": [
@@ -780,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "42f64dde",
    "metadata": {},
    "outputs": [
@@ -857,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "3e9b2d1d",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1078,7 @@
        "2_5         -9.929079     0.101848  118.597994  0.546971  254856.731353  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "ec336662",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "35cdb972",
    "metadata": {},
    "outputs": [
@@ -1212,12 +1205,12 @@
    "id": "4087fa5e",
    "metadata": {},
    "source": [
-    "#  Cell 15 - Merging with orginal DF & saving"
+    "#  Cell 15 - Subclusters labeling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6122a1a1",
    "metadata": {},
    "outputs": [
@@ -1262,8 +1255,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aba0f2ad",
+   "metadata": {},
+   "source": [
+    "# Cell 16 - Finding problematic song's genre"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
+   "id": "658b9156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contains_any(s, patterns):\n",
+    "    \"\"\"\n",
+    "    Ritorna una Series booleana: True se la stringa contiene almeno\n",
+    "    una delle parole nella lista patterns (case insensitive).\n",
+    "    \"\"\"\n",
+    "    if not isinstance(patterns, (list, tuple)):\n",
+    "        patterns = [patterns]\n",
+    "\n",
+    "    # normalizza: minuscolo e sostituisci NaN con stringa vuota\n",
+    "    s_norm = s.fillna(\"\").astype(str).str.lower()\n",
+    "    # costruiamo una regex \"pattern1|pattern2|...\"\n",
+    "    regex = \"|\".join(patterns)\n",
+    "    return s_norm.str.contains(regex, regex=True, na=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c86a9528",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flag contenuto aggiunti:\n",
+      "is_kids         1663\n",
+      "is_christmas     387\n",
+      "is_nursery       163\n",
+      "is_religious     410\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zx/yp44pnk179bb5pqlljkjxp0m0000gp/T/ipykernel_98383/3926096845.py:13: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  return s_norm.str.contains(regex, regex=True, na=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Flag di contenuto \"critico\" / speciale --- \n",
+    "# (ORA controlliamo SOLO il titolo della canzone: track_name)\n",
+    "\n",
+    "kids_patterns = [\n",
+    "    \"kids\", \"children\", \"nursery\", \"baby\", \"bimbi\", \"bambini\",\n",
+    "    \"lullaby\", \"ninna nanna\", \"ninna-nanna\", \"canzoni per bambini\",\n",
+    "    \"disney\", \"cartoon\", \"cartoons\"\n",
+    "]\n",
+    "\n",
+    "xmas_patterns = [\n",
+    "    \"christmas\", \"xmas\", \"natale\", \"noel\", \"navidad\",\n",
+    "    \"feliz navidad\", \"silent night\", \"jingle bells\", \"we wish you a merry christmas\"\n",
+    "]\n",
+    "\n",
+    "nursery_patterns = [\n",
+    "    \"nursery\", \"lullaby\", \"ninna nanna\", \"ninna-nanna\"\n",
+    "]\n",
+    "\n",
+    "religious_patterns = [\n",
+    "    \"gospel\", \"worship\", \"hallelujah\", \"mass\", \"messe\", \"messa\",\n",
+    "    \"kirche\", \"church\", \"santo\", \"gloria\", \"allelui(a|ah)\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def flag_in_track_name(df_local, patterns):\n",
+    "    \"\"\"\n",
+    "    Cerca pattern SOLO in track_name. Ritorna una Series booleana.\n",
+    "    \"\"\"\n",
+    "    if \"track_name\" not in df_local.columns:\n",
+    "        return pd.Series(False, index=df_local.index)\n",
+    "\n",
+    "    return contains_any(df_local[\"track_name\"], patterns)\n",
+    "\n",
+    "\n",
+    "# Applichiamo i flag a df_clustered usando SOLO il titolo della canzone\n",
+    "df_clustered[\"is_kids\"] = flag_in_track_name(df_clustered, kids_patterns)\n",
+    "df_clustered[\"is_christmas\"] = flag_in_track_name(df_clustered, xmas_patterns)\n",
+    "df_clustered[\"is_nursery\"] = flag_in_track_name(df_clustered, nursery_patterns)\n",
+    "df_clustered[\"is_religious\"] = flag_in_track_name(df_clustered, religious_patterns)\n",
+    "\n",
+    "print(\"Flag contenuto aggiunti:\")\n",
+    "print(df_clustered[[\"is_kids\", \"is_christmas\", \"is_nursery\", \"is_religious\"]].sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "984b6b39",
+   "metadata": {},
+   "source": [
+    "# Cell 17 - Language detectiom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "49359a4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "→ Detecting language for each track (può richiedere un po' di tempo)...\n",
+      "Distribuzione 'main_language':\n",
+      "main_language\n",
+      "en       108396\n",
+      "other     26107\n",
+      "de        12125\n",
+      "es        10638\n",
+      "it         4890\n",
+      "pt         3915\n",
+      "fr         3838\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================\n",
+    "#  LANGUAGE DETECTION (track language)\n",
+    "# ============================\n",
+    "def detect_language_for_row(row):\n",
+    "    \"\"\"\n",
+    "    Usa il testo disponibile (track_name + artist_name) per stimare la lingua.\n",
+    "    Restituisce un codice ISO2 tipo 'en', 'it', 'es', ... oppure 'unknown'.\n",
+    "    \"\"\"\n",
+    "    parts = []\n",
+    "\n",
+    "    if \"track_name\" in row and isinstance(row[\"track_name\"], str):\n",
+    "        parts.append(row[\"track_name\"])\n",
+    "    if \"artist_name\" in row and isinstance(row[\"artist_name\"], str):\n",
+    "        parts.append(row[\"artist_name\"])\n",
+    "\n",
+    "    text = \" \".join(parts).strip()\n",
+    "    if not text:\n",
+    "        return \"unknown\"\n",
+    "\n",
+    "    try:\n",
+    "        code = detect(text)   # es. 'en', 'it', 'es', ...\n",
+    "        return code.lower()\n",
+    "    except LangDetectException:\n",
+    "        return \"unknown\"\n",
+    "    except Exception:\n",
+    "        return \"unknown\"\n",
+    "\n",
+    "print(\"→ Detecting language for each track (può richiedere un po' di tempo)...\")\n",
+    "\n",
+    "df_clustered[\"language_raw\"] = df_clustered.apply(detect_language_for_row, axis=1)\n",
+    "\n",
+    "# Normalizziamo in un set di lingue principali che useremo nel recommender\n",
+    "MAIN_LANGS = {\"en\", \"it\", \"es\", \"fr\", \"de\", \"pt\"}\n",
+    "\n",
+    "def normalize_language(code):\n",
+    "    code = str(code).lower()\n",
+    "    if code in MAIN_LANGS:\n",
+    "        return code\n",
+    "    elif code in (\"unknown\", \"\", \"none\", \"nan\"):\n",
+    "        return \"other\"\n",
+    "    else:\n",
+    "        # tutte le altre lingue compattate in 'other'\n",
+    "        return \"other\"\n",
+    "\n",
+    "df_clustered[\"main_language\"] = df_clustered[\"language_raw\"].apply(normalize_language)\n",
+    "\n",
+    "print(\"Distribuzione 'main_language':\")\n",
+    "print(df_clustered[\"main_language\"].value_counts(dropna=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3987af02",
+   "metadata": {},
+   "source": [
+    "# Cell 18 - Saving clustered dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "14ca7dce",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape df_clustered: (169909, 18)\n",
+      "Shape df_clustered: (169909, 24)\n",
       "Salvato: ../data/processed/spotify_dataset_clustered.csv\n"
      ]
     }
