Add requirements_render.txt for Render

--- a/notebooks/05_recommender.ipynb
+++ b/notebooks/05_recommender.ipynb
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "35ee3788",
    "metadata": {},
    "outputs": [],
@@ -1334,6 +1334,11 @@
     "                r'\\s*-\\s*single version.*$',\n",
     "                r'\\s*\\(single version.*\\)$',\n",
     "                r'\\s*-\\s*edited version.*$',\n",
+    "                r'\\s*\\(feat\\..*\\)$',           \n",
+    "                r'\\s*\\(ft\\..*\\)$',             \n",
+    "                r'\\s*\\(featuring.*\\)$',        \n",
+    "                r'\\s*-\\s*feat\\..*$',           \n",
+    "                r'\\s*\\[feat\\..*\\]$',           \n",
     "            ]\n",
     "            for p in patterns:\n",
     "                name = re.sub(p, '', name, flags=re.IGNORECASE)\n",
@@ -1351,16 +1356,17 @@
     "            result['artist_name'].apply(get_main_artist)\n",
     "        )\n",
     "\n",
-    "        # SORT for score\n",
+    "        # SORT by score BEFORE deduplication\n",
     "        result = result.sort_values('score', ascending=False)\n",
     "\n",
-    "        # Deduplication\n",
+    "        # Deduplication - keep first (highest score)\n",
     "        result = result.drop_duplicates(subset='song_signature', keep='first')\n",
+    "        \n",
+    "        # Drop the signature column\n",
     "        result = result.drop(columns=['song_signature'])\n",
     "\n",
     "        n_after = len(result)\n",
-    "        print(f\"Removed {n_before - n_after} duplicates (name + artist)\")\n",
-    "\n",
+    "        print(f\"Removed {n_before - n_after} duplicates (semantic name + main artist)\")\n",
     "    # 14) Varietà artisti: max 3 brani per artista (prima di miscelare fav/others)\n",
     "    if \"artist_name\" in result.columns:\n",
     "        result[\"artist_rank\"] = result.groupby(\"artist_name\").cumcount()\n",
