Sublcsters coverage issue fixed

--- a/notebooks/02_spotify_kaggle_dt.ipynb
+++ b/notebooks/02_spotify_kaggle_dt.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "a767a84d",
    "metadata": {},
    "outputs": [
@@ -26,8 +26,6 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import spotipy\n",
-    "from spotipy.oauth2 import SpotifyOAuth\n",
     "\n",
     "DATA_PROCESSED_DIR = os.path.join(\"..\", \"data\", \"processed\")\n",
     "os.makedirs(DATA_PROCESSED_DIR, exist_ok=True)\n",
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "52a81d66",
    "metadata": {},
    "outputs": [
@@ -258,7 +256,7 @@
        "4       0.0424   62.149   0.0693  1928  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "713c9ec8",
    "metadata": {},
    "outputs": [
@@ -459,7 +457,7 @@
        "4       0.0424   62.149   0.0693       687733      kaggle  spotify_1921_2020  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +480,7 @@
     "    \"loudness\",\"speechiness\",\"tempo\",\"valence\",\"duration_ms\"\n",
     "]\n",
     "\n",
-    "df = df_kaggle[keep].dropna(subset=[\"track_id\"])\n",
+    "df = df[keep].dropna(subset=[\"track_id\"])\n",
     "df[\"source_type\"] = \"kaggle\"\n",
     "df[\"source_label\"] = \"spotify_1921_2020\"\n",
     "\n",
@@ -492,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "2d171483",
    "metadata": {},
    "outputs": [
@@ -516,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "38fd98fc",
    "metadata": {},
    "outputs": [
@@ -683,7 +681,7 @@
        "4   62.149   0.0693       687733  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "3decd612",
    "metadata": {},
    "outputs": [
