--- a/notebooks/04_MLP_model.ipynb
+++ b/notebooks/04_MLP_model.ipynb
@@ -5,12 +5,12 @@
    "id": "34b1f255",
    "metadata": {},
    "source": [
-    "# Cell 1 - Import & path"
+    "# Cell 1 - Import & Loading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "id": "b580b348",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "id": "d1da923a",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset loaded: (169909, 18)\n"
+      "Dataset loaded: (169909, 24)\n"
      ]
     },
     {
@@ -70,14 +70,17 @@
        "      <th>energy</th>\n",
        "      <th>instrumentalness</th>\n",
        "      <th>liveness</th>\n",
-       "      <th>loudness</th>\n",
-       "      <th>speechiness</th>\n",
-       "      <th>tempo</th>\n",
-       "      <th>valence</th>\n",
+       "      <th>...</th>\n",
        "      <th>duration_ms</th>\n",
        "      <th>macro_cluster</th>\n",
        "      <th>subcluster</th>\n",
        "      <th>subcluster_label</th>\n",
+       "      <th>is_kids</th>\n",
+       "      <th>is_christmas</th>\n",
+       "      <th>is_nursery</th>\n",
+       "      <th>is_religious</th>\n",
+       "      <th>language_raw</th>\n",
+       "      <th>main_language</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -93,14 +96,17 @@
        "      <td>0.1950</td>\n",
        "      <td>0.563</td>\n",
        "      <td>0.1510</td>\n",
-       "      <td>-12.428</td>\n",
-       "      <td>0.0506</td>\n",
-       "      <td>118.469</td>\n",
-       "      <td>0.7790</td>\n",
+       "      <td>...</td>\n",
        "      <td>158648</td>\n",
        "      <td>1</td>\n",
        "      <td>1_1</td>\n",
-       "      <td>Warm Emotional Calm</td>\n",
+       "      <td>Warm Emotional Acoustic</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>de</td>\n",
+       "      <td>de</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -114,14 +120,17 @@
        "      <td>0.0135</td>\n",
        "      <td>0.901</td>\n",
        "      <td>0.0763</td>\n",
-       "      <td>-28.454</td>\n",
-       "      <td>0.0462</td>\n",
-       "      <td>83.972</td>\n",
-       "      <td>0.0767</td>\n",
+       "      <td>...</td>\n",
        "      <td>282133</td>\n",
        "      <td>1</td>\n",
        "      <td>1_0</td>\n",
-       "      <td>Deep Calm &amp; Minimal</td>\n",
+       "      <td>Deep Minimal Calm</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>de</td>\n",
+       "      <td>de</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -135,14 +144,17 @@
        "      <td>0.2200</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.1190</td>\n",
-       "      <td>-19.924</td>\n",
-       "      <td>0.9290</td>\n",
-       "      <td>107.177</td>\n",
-       "      <td>0.8800</td>\n",
+       "      <td>...</td>\n",
        "      <td>104300</td>\n",
        "      <td>0</td>\n",
        "      <td>0_0</td>\n",
-       "      <td>Short Spoken Calm</td>\n",
+       "      <td>Spoken Chill &amp; Emotional</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pl</td>\n",
+       "      <td>other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -156,14 +168,17 @@
        "      <td>0.1300</td>\n",
        "      <td>0.887</td>\n",
        "      <td>0.1110</td>\n",
-       "      <td>-14.734</td>\n",
-       "      <td>0.0926</td>\n",
-       "      <td>108.003</td>\n",
-       "      <td>0.7200</td>\n",
+       "      <td>...</td>\n",
        "      <td>180760</td>\n",
        "      <td>1</td>\n",
        "      <td>1_1</td>\n",
-       "      <td>Warm Emotional Calm</td>\n",
+       "      <td>Warm Emotional Acoustic</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>pt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -177,17 +192,21 @@
        "      <td>0.2040</td>\n",
        "      <td>0.908</td>\n",
        "      <td>0.0980</td>\n",
-       "      <td>-16.829</td>\n",
-       "      <td>0.0424</td>\n",
-       "      <td>62.149</td>\n",
-       "      <td>0.0693</td>\n",
+       "      <td>...</td>\n",
        "      <td>687733</td>\n",
        "      <td>1</td>\n",
        "      <td>1_0</td>\n",
-       "      <td>Deep Calm &amp; Minimal</td>\n",
+       "      <td>Deep Minimal Calm</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>fr</td>\n",
+       "      <td>fr</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -205,29 +224,31 @@
        "3                      ['Francisco Canaro']           0  1928         0.995   \n",
        "4  ['Frédéric Chopin', 'Vladimir Horowitz']           1  1928         0.990   \n",
        "\n",
-       "   danceability  energy  instrumentalness  liveness  loudness  speechiness  \\\n",
-       "0         0.708  0.1950             0.563    0.1510   -12.428       0.0506   \n",
-       "1         0.379  0.0135             0.901    0.0763   -28.454       0.0462   \n",
-       "2         0.749  0.2200             0.000    0.1190   -19.924       0.9290   \n",
-       "3         0.781  0.1300             0.887    0.1110   -14.734       0.0926   \n",
-       "4         0.210  0.2040             0.908    0.0980   -16.829       0.0424   \n",
+       "   danceability  energy  instrumentalness  liveness  ...  duration_ms  \\\n",
+       "0         0.708  0.1950             0.563    0.1510  ...       158648   \n",
+       "1         0.379  0.0135             0.901    0.0763  ...       282133   \n",
+       "2         0.749  0.2200             0.000    0.1190  ...       104300   \n",
+       "3         0.781  0.1300             0.887    0.1110  ...       180760   \n",
+       "4         0.210  0.2040             0.908    0.0980  ...       687733   \n",
        "\n",
-       "     tempo  valence  duration_ms  macro_cluster subcluster  \\\n",
-       "0  118.469   0.7790       158648              1        1_1   \n",
-       "1   83.972   0.0767       282133              1        1_0   \n",
-       "2  107.177   0.8800       104300              0        0_0   \n",
-       "3  108.003   0.7200       180760              1        1_1   \n",
-       "4   62.149   0.0693       687733              1        1_0   \n",
+       "   macro_cluster  subcluster          subcluster_label  is_kids  is_christmas  \\\n",
+       "0              1         1_1   Warm Emotional Acoustic    False         False   \n",
+       "1              1         1_0         Deep Minimal Calm    False         False   \n",
+       "2              0         0_0  Spoken Chill & Emotional    False         False   \n",
+       "3              1         1_1   Warm Emotional Acoustic    False         False   \n",
+       "4              1         1_0         Deep Minimal Calm    False         False   \n",
        "\n",
-       "      subcluster_label  \n",
-       "0  Warm Emotional Calm  \n",
-       "1  Deep Calm & Minimal  \n",
-       "2    Short Spoken Calm  \n",
-       "3  Warm Emotional Calm  \n",
-       "4  Deep Calm & Minimal  "
+       "  is_nursery is_religious  language_raw  main_language  \n",
+       "0      False        False            de             de  \n",
+       "1      False        False            de             de  \n",
+       "2      False        False            pl          other  \n",
+       "3      False        False            pt             pt  \n",
+       "4      False        False            fr             fr  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "id": "a87982af",
    "metadata": {},
    "outputs": [
@@ -251,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Righe con subcluster: (169909, 18)\n"
+      "Righe con subcluster: (169909, 24)\n"
      ]
     }
    ],
@@ -270,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "id": "3e9ffb7f",
    "metadata": {},
    "outputs": [
@@ -278,8 +299,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero di subcluster (classi): 11\n",
-      "Classi: ['0_0' '0_1' '1_0' '1_1' '1_2' '2_0' '2_1' '2_2' '2_3' '2_4' '2_5']\n"
+      "Numero di subcluster (classi): 10\n",
+      "Classi: ['0_0' '1_0' '1_1' '1_2' '2_0' '2_1' '2_2' '2_3' '2_4' '2_5']\n"
      ]
     }
    ],
@@ -321,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "id": "dea558c8",
    "metadata": {},
    "outputs": [
@@ -360,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "id": "14bf908b",
    "metadata": {},
    "outputs": [],
@@ -395,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "id": "0a521117",
    "metadata": {},
    "outputs": [],
@@ -436,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "id": "7f426dcb",
    "metadata": {},
    "outputs": [
@@ -444,27 +465,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 | train loss: 0.1732, acc: 0.933 | val loss: 0.1274, acc: 0.952\n",
-      "Epoch 2/20 | train loss: 0.1697, acc: 0.934 | val loss: 0.1276, acc: 0.951\n",
-      "Epoch 3/20 | train loss: 0.1696, acc: 0.934 | val loss: 0.1267, acc: 0.951\n",
-      "Epoch 4/20 | train loss: 0.1704, acc: 0.934 | val loss: 0.1255, acc: 0.951\n",
-      "Epoch 5/20 | train loss: 0.1697, acc: 0.933 | val loss: 0.1259, acc: 0.951\n",
-      "Epoch 6/20 | train loss: 0.1688, acc: 0.934 | val loss: 0.1244, acc: 0.951\n",
-      "Epoch 7/20 | train loss: 0.1669, acc: 0.935 | val loss: 0.1255, acc: 0.951\n",
-      "Epoch 8/20 | train loss: 0.1674, acc: 0.935 | val loss: 0.1247, acc: 0.952\n",
-      "Epoch 9/20 | train loss: 0.1663, acc: 0.936 | val loss: 0.1256, acc: 0.950\n",
-      "Epoch 10/20 | train loss: 0.1648, acc: 0.936 | val loss: 0.1228, acc: 0.951\n",
-      "Epoch 11/20 | train loss: 0.1653, acc: 0.936 | val loss: 0.1237, acc: 0.952\n",
-      "Epoch 12/20 | train loss: 0.1655, acc: 0.935 | val loss: 0.1229, acc: 0.952\n",
-      "Epoch 13/20 | train loss: 0.1640, acc: 0.936 | val loss: 0.1230, acc: 0.953\n",
-      "Epoch 14/20 | train loss: 0.1629, acc: 0.936 | val loss: 0.1226, acc: 0.950\n",
-      "Epoch 15/20 | train loss: 0.1636, acc: 0.936 | val loss: 0.1223, acc: 0.953\n",
-      "Epoch 16/20 | train loss: 0.1630, acc: 0.936 | val loss: 0.1235, acc: 0.950\n",
-      "Epoch 17/20 | train loss: 0.1623, acc: 0.937 | val loss: 0.1222, acc: 0.953\n",
-      "Epoch 18/20 | train loss: 0.1607, acc: 0.937 | val loss: 0.1211, acc: 0.952\n",
-      "Epoch 19/20 | train loss: 0.1614, acc: 0.937 | val loss: 0.1215, acc: 0.952\n",
-      "Epoch 20/20 | train loss: 0.1591, acc: 0.938 | val loss: 0.1209, acc: 0.952\n",
-      "Loaded best model: val_loss=0.1209, val_acc=0.952\n"
+      "Epoch 1/20 | train loss: 0.5838, acc: 0.809 | val loss: 0.2167, acc: 0.921\n",
+      "Epoch 2/20 | train loss: 0.2830, acc: 0.892 | val loss: 0.1841, acc: 0.930\n",
+      "Epoch 3/20 | train loss: 0.2514, acc: 0.903 | val loss: 0.1706, acc: 0.932\n",
+      "Epoch 4/20 | train loss: 0.2308, acc: 0.910 | val loss: 0.1604, acc: 0.937\n",
+      "Epoch 5/20 | train loss: 0.2178, acc: 0.915 | val loss: 0.1552, acc: 0.939\n",
+      "Epoch 6/20 | train loss: 0.2081, acc: 0.919 | val loss: 0.1505, acc: 0.940\n",
+      "Epoch 7/20 | train loss: 0.1979, acc: 0.923 | val loss: 0.1438, acc: 0.943\n",
+      "Epoch 8/20 | train loss: 0.1938, acc: 0.925 | val loss: 0.1410, acc: 0.943\n",
+      "Epoch 9/20 | train loss: 0.1884, acc: 0.927 | val loss: 0.1370, acc: 0.944\n",
+      "Epoch 10/20 | train loss: 0.1840, acc: 0.928 | val loss: 0.1330, acc: 0.947\n",
+      "Epoch 11/20 | train loss: 0.1809, acc: 0.931 | val loss: 0.1327, acc: 0.948\n",
+      "Epoch 12/20 | train loss: 0.1782, acc: 0.932 | val loss: 0.1308, acc: 0.949\n",
+      "Epoch 13/20 | train loss: 0.1749, acc: 0.932 | val loss: 0.1283, acc: 0.949\n",
+      "Epoch 14/20 | train loss: 0.1731, acc: 0.932 | val loss: 0.1288, acc: 0.949\n",
+      "Epoch 15/20 | train loss: 0.1707, acc: 0.933 | val loss: 0.1258, acc: 0.949\n",
+      "Epoch 16/20 | train loss: 0.1694, acc: 0.934 | val loss: 0.1254, acc: 0.951\n",
+      "Epoch 17/20 | train loss: 0.1669, acc: 0.935 | val loss: 0.1249, acc: 0.950\n",
+      "Epoch 18/20 | train loss: 0.1661, acc: 0.935 | val loss: 0.1251, acc: 0.949\n",
+      "Epoch 19/20 | train loss: 0.1648, acc: 0.936 | val loss: 0.1229, acc: 0.951\n",
+      "Epoch 20/20 | train loss: 0.1633, acc: 0.936 | val loss: 0.1222, acc: 0.951\n",
+      "Loaded best model: val_loss=0.1222, val_acc=0.951\n"
      ]
     }
    ],
@@ -548,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "id": "67363c39",
    "metadata": {},
    "outputs": [
@@ -556,22 +577,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.9501500794538285\n",
+      "Test accuracy: 0.9489729856983109\n",
       "\n",
       "Classification report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0_0       0.98      0.98      0.98       258\n",
-      "         0_1       0.92      0.95      0.94       129\n",
-      "         1_0       0.95      0.96      0.96      1337\n",
-      "         1_1       0.96      0.94      0.95      1278\n",
-      "         1_2       0.94      0.95      0.95       717\n",
-      "         2_0       0.95      0.93      0.94      2190\n",
-      "         2_1       0.94      0.96      0.95      2714\n",
+      "         0_0       0.99      0.98      0.98       387\n",
+      "         1_0       0.95      0.97      0.96      1337\n",
+      "         1_1       0.95      0.94      0.95      1278\n",
+      "         1_2       0.93      0.96      0.94       717\n",
+      "         2_0       0.93      0.95      0.94      2190\n",
+      "         2_1       0.95      0.95      0.95      2714\n",
       "         2_2       0.96      0.96      0.96      3470\n",
-      "         2_3       0.95      0.96      0.96      1962\n",
-      "         2_4       0.93      0.92      0.92      1974\n",
-      "         2_5       0.95      0.97      0.96       962\n",
+      "         2_3       0.97      0.94      0.95      1962\n",
+      "         2_4       0.92      0.92      0.92      1974\n",
+      "         2_5       0.94      0.96      0.95       962\n",
       "\n",
       "    accuracy                           0.95     16991\n",
       "   macro avg       0.95      0.95      0.95     16991\n",
@@ -615,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "id": "f0e8517e",
    "metadata": {},
    "outputs": [],
