Finalize recommender, Telegram bot, clustering and README

--- a/notebooks/05_recommender.ipynb
+++ b/notebooks/05_recommender.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 324,
    "id": "77197bcc",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "      <td>158648</td>\n",
        "      <td>1</td>\n",
        "      <td>1_1</td>\n",
-       "      <td>Warm Emotional Calm</td>\n",
+       "      <td>Warm Emotional Acoustic</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -171,7 +171,7 @@
        "      <td>282133</td>\n",
        "      <td>1</td>\n",
        "      <td>1_0</td>\n",
-       "      <td>Deep Calm &amp; Minimal</td>\n",
+       "      <td>Deep Minimal Calm</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -195,7 +195,7 @@
        "      <td>104300</td>\n",
        "      <td>0</td>\n",
        "      <td>0_0</td>\n",
-       "      <td>Short Spoken Calm</td>\n",
+       "      <td>Spoken Chill &amp; Emotional</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -219,7 +219,7 @@
        "      <td>180760</td>\n",
        "      <td>1</td>\n",
        "      <td>1_1</td>\n",
-       "      <td>Warm Emotional Calm</td>\n",
+       "      <td>Warm Emotional Acoustic</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -243,7 +243,7 @@
        "      <td>687733</td>\n",
        "      <td>1</td>\n",
        "      <td>1_0</td>\n",
-       "      <td>Deep Calm &amp; Minimal</td>\n",
+       "      <td>Deep Minimal Calm</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -278,12 +278,12 @@
        "3         0.781  0.1300             0.887    0.1110  ...       180760   \n",
        "4         0.210  0.2040             0.908    0.0980  ...       687733   \n",
        "\n",
-       "   macro_cluster  subcluster     subcluster_label  is_kids  is_christmas  \\\n",
-       "0              1         1_1  Warm Emotional Calm    False         False   \n",
-       "1              1         1_0  Deep Calm & Minimal    False         False   \n",
-       "2              0         0_0    Short Spoken Calm    False         False   \n",
-       "3              1         1_1  Warm Emotional Calm    False         False   \n",
-       "4              1         1_0  Deep Calm & Minimal    False         False   \n",
+       "   macro_cluster  subcluster          subcluster_label  is_kids  is_christmas  \\\n",
+       "0              1         1_1   Warm Emotional Acoustic    False         False   \n",
+       "1              1         1_0         Deep Minimal Calm    False         False   \n",
+       "2              0         0_0  Spoken Chill & Emotional    False         False   \n",
+       "3              1         1_1   Warm Emotional Acoustic    False         False   \n",
+       "4              1         1_0         Deep Minimal Calm    False         False   \n",
        "\n",
        "  is_nursery is_religious  language_raw  main_language  \n",
        "0      False        False            de             de  \n",
@@ -295,7 +295,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
