add is_ soundtrack flag

--- a/notebooks/03_feature_engineering_&_clustering.ipynb
+++ b/notebooks/03_feature_engineering_&_clustering.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "35e79fd9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Vitaliano/Desktop/Data Science/FDS - Fundamentals of Data Science/Homework di Gruppo/Final Project/Music-mood pred/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ef0a3b33",
    "metadata": {},
    "outputs": [
@@ -216,7 +224,7 @@
        "4   62.149   0.0693       687733  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "495cf093",
    "metadata": {},
    "outputs": [
@@ -279,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "00ac94ac",
    "metadata": {},
    "outputs": [
@@ -296,7 +304,7 @@
        "(169909, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a5b7d98f",
    "metadata": {},
    "outputs": [
@@ -395,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "b913b970",
    "metadata": {},
    "outputs": [
@@ -484,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bdbab0c2",
    "metadata": {},
    "outputs": [
@@ -519,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7d7197a3",
    "metadata": {},
    "outputs": [
@@ -580,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "308eb3ed",
    "metadata": {},
    "outputs": [
@@ -694,7 +702,7 @@
        "2              225883.953795  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "b06be8f9",
    "metadata": {},
    "outputs": [
@@ -773,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "42f64dde",
    "metadata": {},
    "outputs": [
@@ -850,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "3e9b2d1d",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1071,7 @@
        "2_5         -9.929079     0.101848  118.597994  0.546971  254856.731353  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "ec336662",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "35cdb972",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "e95bdfa6",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "id": "658b9156",
    "metadata": {},
    "outputs": [],
@@ -1283,44 +1291,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "c86a9528",
+   "execution_count": 21,
+   "id": "63316d57",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zx/yp44pnk179bb5pqlljkjxp0m0000gp/T/ipykernel_1017/3926096845.py:13: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  return s_norm.str.contains(regex, regex=True, na=False)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Flag contenuto aggiunti:\n",
-      "is_kids         1663\n",
-      "is_christmas     387\n",
-      "is_nursery       163\n",
-      "is_religious     410\n",
+      "is_kids          1685\n",
+      "is_christmas      387\n",
+      "is_nursery        163\n",
+      "is_religious      523\n",
+      "is_soundtrack    3110\n",
       "dtype: int64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/zx/yp44pnk179bb5pqlljkjxp0m0000gp/T/ipykernel_98383/3926096845.py:13: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
-      "  return s_norm.str.contains(regex, regex=True, na=False)\n"
      ]
     }
    ],
    "source": [
-    "# --- Flag di contenuto \"critico\" / speciale --- \n",
-    "# (ORA controlliamo SOLO il titolo della canzone: track_name)\n",
+    "# --- Flag di contenuto \"critico\" / speciale ---\n",
+    "# (Controlliamo SOLO il titolo della canzone: track_name)\n",
     "\n",
     "kids_patterns = [\n",
     "    \"kids\", \"children\", \"nursery\", \"baby\", \"bimbi\", \"bambini\",\n",
     "    \"lullaby\", \"ninna nanna\", \"ninna-nanna\", \"canzoni per bambini\",\n",
-    "    \"disney\", \"cartoon\", \"cartoons\"\n",
+    "    \"disney\", \"cartoon\", \"cartoons\",\n",
+    "    \"animation\", \"animated\", \"paw patrol\", \"peppa pig\"\n",
     "]\n",
     "\n",
     "xmas_patterns = [\n",
     "    \"christmas\", \"xmas\", \"natale\", \"noel\", \"navidad\",\n",
-    "    \"feliz navidad\", \"silent night\", \"jingle bells\", \"we wish you a merry christmas\"\n",
+    "    \"feliz navidad\", \"silent night\", \"jingle bells\",\n",
+    "    \"we wish you a merry christmas\"\n",
     "]\n",
     "\n",
     "nursery_patterns = [\n",
@@ -1329,7 +1340,25 @@
     "\n",
     "religious_patterns = [\n",
     "    \"gospel\", \"worship\", \"hallelujah\", \"mass\", \"messe\", \"messa\",\n",
-    "    \"kirche\", \"church\", \"santo\", \"gloria\", \"allelui(a|ah)\"\n",
+    "    \"kirche\", \"church\", \"santo\", \"gloria\", \"allelui(a|ah)\",\n",
+    "    \"psalm\", \"hymn\"\n",
+    "]\n",
+    "\n",
+    "# --- NUOVO: Film / Serie / Cartoon / OST / Theme ---\n",
+    "soundtrack_patterns = [\n",
+    "    \"soundtrack\", \"ost\", \"original soundtrack\", \"original motion picture\",\n",
+    "    \"score\", \"theme\", \"main theme\", \"title theme\", \"opening theme\",\n",
+    "    \"ending theme\", \"end credits\", \"opening credits\",\n",
+    "\n",
+    "    # film / serie / cartoon / anime\n",
+    "    \"movie\", \"film\", \"cinema\",\n",
+    "    \"tv series\", \"television\", \"series\",\n",
+    "    \"anime\", \"manga\",\n",
+    "    \"cartoon\", \"animated\",\n",
+    "    \n",
+    "    # keyword tipiche\n",
+    "    \"opening\", \"ending\", \"theme song\",\n",
+    "    \"main title\", \"title track\"\n",
     "]\n",
     "\n",
     "\n",
@@ -1349,8 +1378,15 @@
     "df_clustered[\"is_nursery\"] = flag_in_track_name(df_clustered, nursery_patterns)\n",
     "df_clustered[\"is_religious\"] = flag_in_track_name(df_clustered, religious_patterns)\n",
     "\n",
+    "# NUOVO FLAG: soundtrack / theme / film / serie / cartoon\n",
+    "df_clustered[\"is_soundtrack\"] = flag_in_track_name(df_clustered, soundtrack_patterns)\n",
+    "\n",
     "print(\"Flag contenuto aggiunti:\")\n",
-    "print(df_clustered[[\"is_kids\", \"is_christmas\", \"is_nursery\", \"is_religious\"]].sum())\n"
+    "print(\n",
+    "    df_clustered[\n",
+    "        [\"is_kids\", \"is_christmas\", \"is_nursery\", \"is_religious\", \"is_soundtrack\"]\n",
+    "    ].sum()\n",
+    ")"
    ]
   },
   {
@@ -1363,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "49359a4e",
    "metadata": {},
    "outputs": [
@@ -1374,13 +1410,13 @@
       "→ Detecting language for each track (può richiedere un po' di tempo)...\n",
       "Distribuzione 'main_language':\n",
       "main_language\n",
-      "en       108449\n",
-      "other     26105\n",
-      "de        12075\n",
-      "es        10644\n",
-      "it         4881\n",
-      "pt         3916\n",
-      "fr         3839\n",
+      "en       108371\n",
+      "other     26137\n",
+      "de        12058\n",
+      "es        10661\n",
+      "it         4913\n",
+      "fr         3889\n",
+      "pt         3880\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -1446,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "14ca7dce",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape df_clustered: (169909, 24)\n",
+      "Shape df_clustered: (169909, 25)\n",
       "Salvato: ../data/processed/spotify_dataset_clustered.csv\n"
      ]
     }
